--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "preview": "vite preview"
   },
   "devDependencies": {
+    "pixi-stats": "^4.2.0",
     "typescript": "~5.8.3",
     "vite": "^7.1.2"
   },
